--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+@import 'https://unpkg.com/tachyons@4/css/tachyons.min.css';
+
+:root {
+  --card-size: 16;
+  --card-w: calc(var(--card-size) * 1rem);
+  --card-h: calc(var(--card-size) * 1.25rem);
+}
+
+* {
+  box-sizing: border-box !important;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Helvetica, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
