--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import 'https://unpkg.com/tachyons@4/css/tachyons.min.css';
-
 :root {
   --card-size: 16;
   --card-w: calc(var(--card-size) * 1rem);
@@ -19,4 +17,57 @@ body {
 
 .card {
   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.qty-button {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0;
+  position: relative;
+}
+
+.plus:before {
+  position: absolute;
+  content: '';
+  height: 1rem;
+  width: 0.125rem;
+  background-color: white;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.plus:after,
+.minus:after {
+  /*border: 1px white solid;*/
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  content: '';
+  height: 0.125rem;
+  width: 1rem;
+  background-color: white;
+  transform: translate(-50%, -50%);
+}
+
+.remove:after {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  content: '';
+  height: 0.125rem;
+  width: 1rem;
+  background-color: white;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.remove:before {
+  position: absolute;
+  content: '';
+  height: 1rem;
+  width: 0.125rem;
+  background-color: white;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
 }
