--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --card-size: 16;
   --card-w: calc(var(--card-size) * 1rem);
   --card-h: calc(var(--card-size) * 1.25rem);
-  --bg-color: #fafafa;
+  --bg-color: rgba(250, 250, 250, var(--bg-color-a, 1));
 }
 
 * {
@@ -12,6 +12,12 @@
 
 html {
   background-color: var(--bg-color);
+}
+
+.App > header {
+  --bg-color-a: 0.5;
+  background-color: var(--bg-color);
+  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
 body {
