--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --card-size: 16;
   --card-w: calc(var(--card-size) * 1rem);
   --card-h: calc(var(--card-size) * 1.25rem);
-  --bg-color: rgba(250, 250, 250, var(--bg-color-a, 1));
+  --bg-color: rgb(250, 250, 250);
 }
 
 * {
@@ -16,7 +16,6 @@ html {
 
 .App > header {
   --bg-color-a: 0.5;
-  background-color: var(--bg-color);
   box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -105,4 +104,21 @@ body {
   top: 50%;
   animation: scale 0.5s ease-in-out infinite alternate;
   transform: translate(-50%, -50%);
+}
+
+._bg-main {
+  background-color: var(--bg-color);
+}
+
+._p-inline {
+  padding-inline-start: 0.5rem;
+  padding-inline-end: 0.5rem;
+}
+
+form.checkout {
+  min-width: 30rem;
+}
+
+form.checkout > input {
+  width: 100%;
 }
